[package]
name = "rusturn"
version = "0.0.7"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A Rust implementation of TURN server and client"
homepage = "https://github.com/sile/rusturn"
repository = "https://github.com/sile/rusturn"
readme = "README.md"
keywords = ["TURN"]
categories = ["asynchronous", "network-programming"]
license = "MIT"
edition = "2021"

[badges]
coveralls = {repository = "sile/rusturn"}

[dependencies]

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.9"
fibers_global = "0.1.2"
